--- a/templates/newschema.html
+++ b/templates/newschema.html
@@ -5,12 +5,12 @@ function appendText() {
     let columnName = $(`
         <div class="form-group col-md-4">
             <label for="columnName">Column name: </label>
-            <input type="text" class="form-control" id="columnName" name='columnName'>
+            <input type="text" required class="form-control" id="columnName" name='column_name'>
         </div>`);
     let type = $(`
         <div class="form-group col-md-3">
             <label for="type"> Type: </label>
-            <select size="1" id="type" class="form-control" name="choices[]">
+            <select size="1" id="type" class="form-control" name="choices">
                 <option selected value="Full name">Full name</option>
                 <option value="Integer">Integer</option>
                 <option value="Company">Company</option>
@@ -38,7 +38,7 @@ function appendText() {
             {% csrf_token %}
             <div class="form-group col-md-4">
                 <label for="inputName"> Name: </label>
-                <input type="text" class="form-control"  id="inputName" name="name_of_schemas">
+                <input type="text" required class="form-control"  id="inputName" name="name_of_schemas">
             </div>
             <div class="col-md-6" style="margin-top: 20px;">
                 <input type="submit" class="btn btn-primary float-right"  value="submit">
@@ -48,12 +48,12 @@ function appendText() {
         <div class="form-row columns-csv">
             <div class="form-group col-md-4">
                 <label for="columnName">Column name: </label>
-                <input type="text" class="form-control" id="columnName" name='columnName'>
+                <input type="text" required class="form-control" id="columnName" name='column_name'>
             </div>
 
             <div class="form-group col-md-3">
                 <label for="type"> Type: </label>
-                <select size="1" id="type" class="form-control" name="choices[]">
+                <select size="1" id="type" class="form-control" name="choices">
                     <option selected value="Full name">Full name</option>
                     <option value="Integer">Integer</option>
                     <option value="Company">Company</option>
