--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,12 @@
       <th scope="row">{{ forloop.counter }}</th>
       <td><a href="{% url 'schema-detail' schema.id %}">{{ schema.name }}</a></td>
       <td>{{schema.updated_at}}</td>
-      <td> <button>Edit Scheme</button> <button>Delete</button></td>
+      <td>
+          <a href="{% url 'schema-update' schema.id %}">
+              Edit Scheme
+          </a>
+          <a href="#" style="color: red;">Delete</a>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
